# redemption

./: .editorconfig  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  .travis.yml.old  CMakeLists.txt  Dockerfile  Jamroot  README  README.md  README.txt  TraceSessionProbe.txt  bogus_line.coordinates  current_xml  cxxflags.jam  defines.jam  dumptrace.cpp  emscripten.jam  generate_index.sh  icapClient.pl  icap_client  icap_client_scan_module  includes.jam  libs.jam  log_siem_arcsight.md  ocr.jam  project-config.jam  redemption-config.jam  ruff.toml  sonar-project.properties  start.sh  targets.jam  trace_10.10.14.88.hpp  trace_bug_client.txt  trace_server_bogus.txt  tracexp2.cpp  veracode-package.sh  veracode.expmap
Linux.Chapros.A/: linux-chapros_ E022DE72CCE8129BD5AC8A0675996318  the_injected_iFrame_java-cve-2012-1723  the_zeus_binary_chapros
acl/: acl_serializer.hpp  auth_api.hpp  authentifier.hpp  dico.hpp  keywords.hpp  mm_api.hpp  modcontext.hpp  module_manager.hpp  sesman.hpp
bjam-qt-example/: Jamroot  main.cpp  main.h
builder/: Dockerfile
capture/: CaptureDevice.hpp  ChunkToFile.hpp  FileToChunk.hpp  FileToGraphic.hpp  GraphicToFile.hpp  OSDCapture.hpp  RDPChunkedDevice.hpp  bmpcache.hpp  capture.hpp  chunked_image_transport.hpp  drawable.hpp  drawable.hpp.old  filename_generator.hpp  image_capture.hpp  meta_file.hpp  meta_wrm.hpp  nativecapture.hpp  socket_capture.hpp  staticcapture.hpp  timer_capture.hpp  transparentchunk.hpp  transparentplayer.hpp  transparentrecorder.hpp
core/: NewRDPOrders.hpp  altoco.hpp  bitmap.hpp  bitmap_cache.hpp  bmpcache.hpp  cache.hpp  callback.hpp  channel_list.hpp  channel_names.hpp  check_files.hpp  chrono.cpp  cipher.hpp  cipher_transport.hpp  client_info.hpp  client_mod.hpp  colors.hpp  config.cpp  config.hpp  constants.hpp  defines.hpp  dico.hpp  difftimeval.hpp  draw_api.hpp  drawable.hpp  error.hpp  file_loc.hpp  font.hpp  front_api.hpp  graphic_device.hpp  inbymetasequencetransport.hpp  iso_layer.hpp  keymap.cpp  keymap.hpp  keymap2.hpp  keymapSym.hpp  keywords.hpp  listen.hpp  log.hpp  main.cpp  mainloop.cpp  (+28 more)
docs/: Capture.txt  Coding_Guidelines.tex  Coding_Guidelines_2.md  FAQ.txt  MCSPDU_GRAMMAR.txt  PARAMETRES_VIDEO  ROADMAP.rst  X224_class0_cheat_sheet.txt  bitmap_RLE_cheat_sheet.txt  changelog  coding_style.txt  conf.ffmpeg.txt  conf.x264.txt  copyright  log_siem_arcsight.md  manual_to_redemption.rst  mod_rdp_verbose_flags.txt  redop.py  redop_grammar.g  theme_color.txt  unsupported_features.txt
front/: front.hpp  front_channel_rail.hpp  orders.cpp  orders.hpp  server_mcs.hpp  server_rdp.hpp  server_sec.hpp
ftests/: freetype_draw.cpp  rgx_cmp.cpp  tls_test_client.cpp  tls_test_server.cpp
headers/: openssl_crypto.hpp  openssl_tls.hpp
icap/: icap_file_request.py  icap_service
include/: config_variant.hpp  openssl_crypto.hpp  openssl_evp.hpp
jam/: coverage.jam  cxxflags.jam  defines.jam  includes.jam  libs.jam  ocr.jam  redemption-config.jam  redemption-dependencies.jam  sanitizer.jam  testing-coverage.jam
keyboard/: keylayout.hpp  keylayout_x00000405.hpp  keylayout_x00000406.hpp  keylayout_x00000407.hpp  keylayout_x00000408.hpp  keylayout_x00000409.hpp  keylayout_x0000040a.hpp  keylayout_x0000040b.hpp  keylayout_x0000040c.hpp  keylayout_x0000040f.hpp  keylayout_x00000410.hpp  keylayout_x00000413.hpp  keylayout_x00000414.hpp  keylayout_x00000415.hpp  keylayout_x00000416.hpp  keylayout_x00000418.hpp  keylayout_x00000419.hpp  keylayout_x0000041a.hpp  keylayout_x0000041b.hpp  keylayout_x0000041d.hpp  keylayout_x0000041f.hpp  keylayout_x00000422.hpp  keylayout_x00000424.hpp  keylayout_x00000425.hpp  keylayout_x00000426.hpp  keylayout_x00000427.hpp  keylayout_x0000042f.hpp  keylayout_x00000438.hpp  keylayout_x0000043a.hpp  keylayout_x0000043b.hpp  keylayout_x0000043f.hpp  keylayout_x00000440.hpp  keylayout_x00000444.hpp  keylayout_x00000450.hpp  keylayout_x00000452.hpp  keylayout_x0000046e.hpp  keylayout_x00000481.hpp  keylayout_x00000807.hpp  keylayout_x00000809.hpp  keylayout_x0000080a.hpp  (+48 more)
libs/: redtrans.h  rio.cpp  rio.h  rio_XXX.h  rio_check.h  rio_constants.h  rio_generator.h  rio_impl.h  rio_infile.h  rio_inmeta.h  rio_insequence.h  rio_outfile.h  rio_outmeta.h  rio_outsequence.h  rio_socket.h  rio_socket_TLS.h  rio_test.h  rt_XXX.h  rt_check.h  rt_clientsocket.h  rt_constants.h  rt_generator.h  rt_inbyfilename.h  rt_inbyfilenamesequence.h  rt_inbymetasequence.h  rt_infile.h  rt_inmeta.h  rt_insequence.h  rt_outbyfilename.h  rt_outbyfilenamesequence.h  rt_outbyfilenamesequencewithmeta.h  rt_outfile.h  rt_outmeta.h  rt_outsequence.h  rt_socket.h  rt_socket_TLS.h  rt_test.h  sq_infilename.h  sq_inmeta.h  sq_intracker.h  (+4 more)
main/: app_decrypter.hpp  decrypter.cpp  drawtest.cpp  extract_info.cpp  main.cpp  recorder.cpp  recorder_app.hpp  tanalyzer.cpp  transparent.cpp  verifier.cpp  version.hpp  wrm_recorder_option.hpp
mod/: draw_api.hpp  mod_api.hpp  mod_osd.hpp  osd_mod.hpp
packaging/: package.sh
public/: index.html
recorder/: range_time_point.hpp  time_point.hpp  wrm_recorder.hpp
regex/: regex.hpp  regex_automate.hpp  regex_consumer.hpp  regex_parser.hpp  regex_states_value.hpp  regex_utils.hpp
src/: new_file
tests/: check_mem.hpp  check_sig.hpp  compression.perf  dump_png.hpp  epoll.cpp  ftest_short_session_to_bouncing_bitmap.cpp  redemption_unit_tests.hpp  test_RDP_graphic_to_file.cpp  test_RDP_graphic_to_file_2.cpp  test_RDP_graphic_to_file_3.cpp  test_RDP_graphic_to_file_4.cpp  test_RDP_graphic_to_file_5.cpp  test_absolute_primary_order_opaque_rect.cpp  test_bitfu.cpp  test_bitmap.cpp  test_bitmap_cache.cpp  test_bitmap_perf.cpp  test_breakpoint.cpp  test_capability_activate.cpp  test_capability_bitmap.cpp  test_capability_bmpcache.cpp  test_capability_brushcache.cpp  test_capability_compdesk.cpp  test_capability_control.cpp  test_capability_drawgdiplus.cpp  test_capability_drawninegridcache.cpp  test_capability_font.cpp  test_capability_frameacknowledge.cpp  test_capability_general.cpp  test_capability_glyphcache.cpp  test_capability_input.cpp  (+111 more)
(+5263 files in other folders)
